使用 Colaboratory 建立

--- a/insertionsort_20200930.ipynb
+++ b/insertionsort_20200930.ipynb
@@ -48,11 +48,11 @@
         "def Insertion_Sort(datas):                 \n",
         "    for i in range(1, len(datas)):           \n",
         "        for j in range(i):             \n",
-        "            current = datas[i]          #  (n-1)*n(n-1)*1\n",
-        "            if current < datas[j]:       #  (n-1)*n(n-1)*1\n",
-        "                for k in range(i,j):    #  (n-1)*n(n-1)*1*\n",
+        "            current = datas[i]          \n",
+        "            if current < datas[j]:       \n",
+        "                for k in range(i,j):    \n",
         "                  print(datas)\n",
-        "    return datas                     #  1\n",
+        "    return datas                     \n",
         "'''\n",
         "\n",
         "def insertionSort(arr):                           # 執行次數(n:len(arr))\n",
